# legacy-comcigan-api

./: Dockerfile  README.md  pyproject.toml
comcigan_api/: error.py  main.py
comcigan_api/routes/: school.py
comcigan_api/services/: school.py
